# protocol_parser

./: README.rst  pyproject.toml
protocol_parser/: MarkdownParser.py  cli.py
tests/: test_cli.py  test_protocol_parser.py
